# app.js
@@ -2,28 +2,32 @@ if (process.env.NODE_ENV !== "production") {
   require("dotenv").config();
 }
 
-require('./middleware/intrument')
-const express = require('express')
-const Sentry = require('@sentry/node')
-const bodyParser = require('body-parser')
-const cors = require('cors')
-const cookieParser = require('cookie-parser')
-const { errorHandler } = require('./middleware/errorMiddleware')
-const passport = require('./libs/passport')
-const cookieMiddleware = require('./middleware/cookieMiddleware')
-const swaggerUi = require('swagger-ui-express');
+require('./middleware/intrument');
+const express = require('express');
+const Sentry = require('@sentry/node');
+const bodyParser = require('body-parser');
+const cors = require('cors');
+const cookieParser = require('cookie-parser');
+const { errorHandler } = require('./middleware/errorMiddleware');
+const passport = require('./libs/passport');
+const cookieMiddleware = require('./middleware/cookieMiddleware');
+const swaggerUi = require("swagger-ui-express");
+const YAML = require("yamljs");
+const path = require("path");
 
-const app = express()
-const PORT = process.env.PORT || 3000
+const app = express();
+const PORT = process.env.PORT || 3000;
 
 const authRoute = require('./routes/authRoutes');
 const ticketRoute = require('./routes/ticketRoutes');
-const transactionRoutes = require("./routes/transactionRoutes");
-const flightRoute = require('./routes/flightRoutes')
-const seatRoute = require('./routes/seatRoutes')
-const airlineRoute = require('./routes/airlineRoutes')
-const airportRoute = require('./routes/airportRoutes')
+const transactionRoutes = require('./routes/transactionRoutes');
+const flightRoute = require('./routes/flightRoutes');
+const seatRoute = require('./routes/seatRoutes');
+const airlineRoute = require('./routes/airlineRoutes');
+const airportRoute = require('./routes/airportRoutes');
 const notificationRoutes = require('./routes/notificationRoutes');
+const changeProfileRoute = require('./routes/changeProfileRoute');
+const swaggerDocument = YAML.load(path.join(__dirname, "docs", "swagger.yml"));
 
 const corsOptions = {
   origin: [
@@ -35,9 +39,9 @@ const corsOptions = {
   ],
   methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS'],
   credentials: true,
-}
+};
 
-app.use(cors(corsOptions))
+app.use(cors(corsOptions));
 
 app.use(bodyParser.json());
 app.use(bodyParser.urlencoded({ extended: true }));
@@ -48,30 +52,33 @@ app.use(passport.session());
 
 app.get('/', (req, res) => {
   res.send('Hello World!');
-  // console.log('SESSION',req.session);
+  // console.log('SESSION', req.session);
   // console.log('sessionID', req.sessionID);
   // console.log('USER', req.user);
 });
 
-app.use('/api/auth', authRoute)
+app.use(express.json());
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use('/api/auth', authRoute);
 app.use('/api/transaction', transactionRoutes);
-app.use('/api/ticket', ticketRoute)
-app.use('/api/flight', flightRoute)
-app.use('/api/seat', seatRoute)
-app.use('/api/airline', airlineRoute)
-app.use('/api/airport', airportRoute)
-app.use('/api/notifications', notificationRoutes)
+app.use('/api/ticket', ticketRoute);
+app.use('/api/flight', flightRoute);
+app.use('/api/seat', seatRoute);
+app.use('/api/airline', airlineRoute);
+app.use('/api/airport', airportRoute);
+app.use('/api/notifications', notificationRoutes);
+app.use('/api/profile', changeProfileRoute);
+app.use("/api/user", changeProfileRoute);
 
 // Request logging middleware
 app.use((req, res, next) => {
-  console.log(`${new Date().toISOString()} - ${req.method} ${req.path}`)
-  next()
-})
+  console.log(`${new Date().toISOString()} - ${req.method} ${req.path}`);
+  next();
+});
 
-app.use(errorHandler)
+app.use(errorHandler);
 Sentry.setupExpressErrorHandler(app);
 
-
-app.listen (PORT, () => {
-  console.log(`Example app listening on port ${PORT}`)
-})
+app.listen(PORT, () => {
+  console.log(`Example app listening on port ${PORT}`);
+});
