# routes/changeProfileRoute.js
@@ -1,0 +1,13 @@
+const express = require("express");
+const router = express.Router();
+const {
+  getProfile,
+  updateProfile,
+  deleteProfile,
+} = require("../controllers/changeProfileController");
+
+router.get("/:id", getProfile);
+router.put("/:id", updateProfile);
+router.delete("/:id", deleteProfile);
+
+module.exports = router;
